--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,55 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #E5E5E5;
+}
+
+.container-fluid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.custom-card {
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.05);
+  padding: 30px;
+  width: 400px;
+}
+
+.horizontal-line-text {
+  width: 100%;
+  text-align: center;
+  border-bottom: 1px solid #D8DDEC;
+  line-height: 0.1rem;
+  margin: 25px 0 30px 0;
+
+  span {
+    background: white;
+    padding: 0 10px;
+  }
+}
+
+.google-sign-in {
+  background-color: white;
+  border: 1px solid #D8DDEC;
+  padding: 10px 30px;
+  text-align: center;
+  font-weight: bold;
+  height: 100%;
+
+  img {
+    float: left;
+  }
+
+  span {
+    vertical-align: middle;
+  }
+}
+
+.user-avatar {
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+}
